--- a/zad3/index.html
+++ b/zad3/index.html
@@ -5,12 +5,15 @@
       <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-      <h1>13. Node.js - czyli JavaScript poza przeglądarką (Moduł)</h1>
-      <h2>13.4. Wprowadzenie do modułów</h2>
-      <h3>Zadanie: Kształtujemy czas</h3>
-      
+      <h1>Welcome to my page</h1>
+      <h2>Modul 13</h2>
+      <h3>13. Node.js - czyli JavaScript poza przeglądarką (Moduł)</h3>
+      <h3>13.5. npm, czyli jak nie wymyślać koła na nowo</h3>
+      <h3>Zadanie: Pierwsze paczki za płoty</h3>
+      <br><br><br><br>
 
-      <script type="text/javascript" src="js/program.js"></script>
+
+
       <script type="text/javascript" src="js/scripts.js"></script>
     </body>
   </html>
